# src

./: commands.md  init_pose.yaml
.devcontainer/: Dockerfile  devcontainer.json  rosPkgs.list
map_package/: field2025.yaml
minimal_bot_cpp/: CMakeLists.txt
minimal_bot_cpp/install/: local_setup.sh  setup.sh
minimal_bot_cpp/install/minimal_bot_cpp/lib/minimal_bot_cpp/: static_tf_publishers
minimal_bot_cpp/install/minimal_bot_cpp/share/minimal_bot_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
minimal_bot_cpp/install/minimal_bot_cpp/share/minimal_bot_cpp/cmake/: minimal_bot_cppConfig.cmake
minimal_bot_cpp/install/minimal_bot_cpp/share/minimal_bot_cpp/launch/: state_pub.launch.py
minimal_bot_cpp/install/minimal_bot_cpp/share/minimal_bot_cpp/urdf/: minimal_bot.urdf.xacro
minimal_bot_cpp/launch/: bringup.launch.py
minimal_bot_cpp/log/: latest_build
minimal_bot_cpp/rviz/: minimal.rviz
minimal_bot_cpp/src/: static_tf_publishers.cpp
